# am-extension

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  am_state.db
_bmad/: config.toml  config.user.toml
_bmad-output/: current-task.md
_bmad/_config/: bmad-help.csv  files-manifest.csv  manifest.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
am-core/: Cargo.toml
am-core/src/: db.rs  state.rs
am-dashboard/: index.html  package.json
am-dashboard/src/: App.css  App.tsx  index.css
am-extension/: am-extension-0.0.1.vsix  package-lock.json  package.json
am-extension/src/: extension.ts  jira.ts
am-extension/src/commands/: startTask.ts
am-extension/src/handlers/: uriHandler.ts
am-extension/src/services/: gitService.ts  jiraService.ts  taskContextService.ts
am-extension/src/ui/: outputChannel.ts  statusBar.ts
am-mcp/: Cargo.toml
am-mcp/src/: jira.rs  lib.rs  protocol.rs  server.rs
am-task/: Cargo.toml
am-task/src/: main.rs
