[package]
name = "am-task"
version = "0.1.0"
edition = "2024"

[dependencies]
am-core = { version = "0.1.0", path = "../am-core" }
am-mcp = { version = "0.1.0", path = "../am-mcp" }
anyhow = "1.0.102"
axum = "0.8.9"
clap = { version = "4.6.1", features = ["derive"] }
dotenvy = "0.15.7"
regex = "1.12.3"
reqwest = { version = "0.13.3", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
tokio = { version = "1.52.1", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
